tests/compile-fail/integration__integration__type_check__diffswitch__out_void.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: type error
  ┌─ <input>:9:13
  │
9 │     int x = ins_0():::;
  │             ^^^^^^^---
  │             │
  │             expects a value
  │             void type


